# cb-simulator-yew

./: .gitignore  Cargo.toml  LICENSE.md  README.md  Trunk.toml  build.rs  cb-simulator-yew.js  cb-simulator-yew_bg.wasm  generate_tailwind_safelist.js  index.css  index.html  output.css  package-lock.json  package.json  tailwind.config.js
.github/workflows/: rust.yml  trunk-deploy.yml
src/: app.rs  lib.rs  main.rs  plotly_example.rs  plotly_pt1.rs  router.rs
src/components/: about_git.rs  customized_about.rs  impulse_fn.rs  mod.rs  named_time_signal_dialog.rs  plot_control.rs  plot_element.rs  plot_time_signal.rs  plotly_example.rs  pt1_time_domain.rs  step_fn.rs  theme_toggle.rs  time_range.rs  time_signal.rs  time_signal_select.rs
src/components/control/: controller.rs  mod.rs  pid_core.rs  pid_dead_band.rs  pid_input.rs  pid_output.rs
src/components/plant/: element.rs  element_select.rs  mod.rs  named_element.rs  named_element_dialog.rs  pt0.rs  pt1.rs  pt2.rs  register_all.rs
src/components/time_signal/: impulse_fn.rs  mod.rs  named_time_signal_dialog.rs  register_all.rs  registry.rs  step_fn.rs  time_signal.rs  time_signal_select.rs
src/pages/: about.rs  error.rs  landing.rs  mod.rs  time_domain.rs  z_domain.rs
src/plant/: mod.rs  named_element.rs  register_all.rs  registry.rs
src/time_signal/: mod.rs  named_time_signal.rs  registry.rs
